==> XuanSama02/STM32H750_POLARIS_BSP/Drivers/BSP/TIMER/timer.c <==
#include "timer.h"
#include "led.h"

TIM_HandleTypeDef TIM3_Handler;  //定时器句柄 
TIM_HandleTypeDef TIM6_Handler;  //定时器6句柄 

__IO u32 ticknum=0;

u16 frame;
vu8 frameup;

/**
 * @brief 通用定时器3中断初始化,开启中断,APB1总线,时钟为HCLK/2
 * 
 * @param arr 自动重装值
 * @param psc 预分频系数
 */
void tim3_init(u16 arr, u16 psc)
{
    TIM3_Handler.Instance           = TIM3;  //通用定时器3
    TIM3_Handler.Init.Period        = arr;   //自动装载值
    TIM3_Handler.Init.Prescaler     = psc;   //分频
    TIM3_Handler.Init.CounterMode   = TIM_COUNTERMODE_UP;  //向上计数器
    TIM3_Handler.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    HAL_TIM_Base_Init(&TIM3_Handler);
    HAL_TIM_Base_Start_IT(&TIM3_Handler);    //使能定时器3和定时器3中断   
}

/**
 * @brief 通用定时器6初始化,开启中断,APB1总线,时钟为HCLK/2
 * 
 * @param arr 自动重装值
 * @param psc 预分频系数
 */
void tim6_init(u16 arr, u16 psc)
{  
    TIM6_Handler.Instance           = TIM6;  //通用定时器6
    TIM6_Handler.Init.Period        = arr;   //自动装载值
    TIM6_Handler.Init.Prescaler     = psc;   //分频
    TIM6_Handler.Init.CounterMode   = TIM_COUNTERMODE_UP;  //向上计数器
    TIM6_Handler.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    HAL_TIM_Base_Init(&TIM6_Handler);
    HAL_TIM_Base_Start_IT(&TIM6_Handler);    //使能定时器6和定时器6中断   
}

/**
 * @brief 定时器底册驱动，开启时钟，设置中断优先级,会被HAL_TIM_Base_Init()自动调用
 * 
 * @param htim 定时器句柄
 */
void HAL_TIM_Base_MspInit(TIM_HandleTypeDef *htim)
{
    if(htim->Instance == TIM3)
    {
        __HAL_RCC_TIM3_CLK_ENABLE();            //使能TIM3时钟;
        HAL_NVIC_SetPriority(TIM3_IRQn, 1, 3);  //设置中断优先级，抢占优先级1，子优先级3
        HAL_NVIC_EnableIRQ(TIM3_IRQn);          //开启ITM3中断
    }
    else if(htim->Instance == TIM6)
    {
        __HAL_RCC_TIM6_CLK_ENABLE();                //使能TIM6时钟;
        HAL_NVIC_SetPriority(TIM6_DAC_IRQn, 0, 3);  //设置中断优先级，抢占优先级0，子优先级3
        HAL_NVIC_EnableIRQ(TIM6_DAC_IRQn);          //开启ITM6中断
    }
}

/**
 * @brief 定时器3中断服务函数
 * 
 */
void TIM3_IRQHandler(void)
{
    HAL_TIM_IRQHandler(&TIM3_Handler);
}

/**
 * @brief 定时器6中断服务函数
 * 
 */
void TIM6_DAC_IRQHandler(void)
{
    HAL_TIM_IRQHandler(&TIM6_Handler);
}

/**
 * @brief 定时器3中断回调函数
 * 
 * @param htim 
 */
void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim)
{
    if(htim->Instance == TIM3)          //定时器3
    {
        //ticknum++;
        printf("frame:%d\r\n", frame);  //打印帧率
        frame = 0;
    }
    else if(htim->Instance == TIM6)     //定时器6
    {
        frameup = 1;
    }
}

/**
 * @brief 获取ticknum
 * 
 * @return u32 ticknum
 */
u32 get_ticknum(void)
{
    return ticknum;
}

/**
 * @brief 使能TIM3
 * 
 */
void tim3_start(void)
{
    __HAL_TIM_ENABLE(&TIM3_Handler);
    ticknum=0;
}

/**
 * @brief 关闭TIM3
 * 
 */
void tim3_stop(void)
{
    __HAL_TIM_DISABLE(&TIM3_Handler);
}
